lager-lang/examples/good/16-01-break.lg
int main() {
    int x = 0;
    while (x < 10) {
        if (x == 5) {
            break;
        }
        x = x + 1;
    }
    print(x); // 5
    
    return 0;
}
