lager-lang/examples/bad/compare-bools.lg
int main() {
    print(true >= false); // compile error
    
    return 0;
}
